[tool.poetry]
name = "air-bot"
version = "0.1.0"
description = "Air quality bot, posts map predictions on mapstodon.space"
authors = ["guilhemallaman <contact@guilhemallaman.net>"]
license = "GPL-2"
readme = "README.md"
packages = [{include = "air_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.5"
mastodon-py = "^2.1.4"
colorlog = "^6.10.1"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
isort = "^7.0.0"
mypy = "^1.19.1"

[tool.poetry.scripts]
airparif = "air_bot.airparif:airparif"
atmosud = "air_bot.atmosud:atmosud"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
